[package]
name = "cavempv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
config = "0.15.11"
crossbeam = "0.8.4"
ftail = "0.3.0"
futures = "0.3.31"
libmpv = { git = "https://github.com/Robogera/libmpv-rs.git", version = "2.0.1" }
log = "0.4.27"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.15", features = ["codec"] }
